[workspace]
members = ["crates/*", "library/*"]

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/eggyal/copse.git"
edition = "2021"
authors = ["Alan Egerton <eggyal@gmail.com>"]

[workspace.dependencies]
contextual_alloc.path = "library/alloc"
contextual_core.path = "library/core"
contextual_hashbrown = { path = "crates/hashbrown", default-features = false, features = ["rustc-internal-api"] }
